# AI-Brain

./: .gitignore  clean_databases.bat
backend/: Cargo.toml  feedback.jsonl  memos.db  rs结构树.py  当前修改后的结构树以及代码.json
backend/.cargo/: config.toml
backend/agent_analyzer/: README.md
backend/agent_memos/: Cargo.toml
backend/agent_memos/src/: db.rs  embedding.rs  lib.rs  memory_tier_manager.rs  prompts.rs  query_expander.rs
backend/agent_rag/: README.md
backend/common_utils/: Cargo.toml
backend/common_utils/src/: lib.rs
backend/memos_cli/: Cargo.toml
backend/memos_cli/src/: main.rs
backend/memos_core/: Cargo.toml
backend/memos_core/src/: lib.rs
backend/micromodels/: Cargo.toml  build.rs
backend/micromodels/src/: lib.rs
backend/micromodels/src/proto/: preprocessor.proto
backend/models/: confirmation_classifier.onnx  confirmation_preprocessor_data.json  is_question_classifier.onnx  is_question_preprocessor_data.json  ner_core_entity.onnx
backend/orchestrator/: Cargo.toml
backend/orchestrator/src/: lib.rs  orchestrator.rs  prompts.rs
backend/orchestrator/src/experts/: mod.rs  re_ranker.rs  recall_expert.rs  router.rs
backend/orchestrator/src/experts/memos_agent/: confirmation_expert.rs  mod.rs  modify_expert.rs  recall_expert.rs  router.rs  save_expert.rs
backend/orchestrator/src/experts/rag_agent/: mod.rs
backend/orchestrator/src/preprocessors/: mod.rs
backend/orchestrator/src/preprocessors/memos_agent/: disambiguation.rs  mod.rs
backend/orchestrator/src/preprocessors/rag_agent/: mod.rs
backend/server/: Cargo.toml
backend/server/src/: main.rs
backend/src-tauri/: tauri.conf.json
frontend/instant_assistant/: README.md  pubspec.yaml
frontend/instant_assistant/android/app/: build.gradle.kts
frontend/instant_assistant/android/app/src/main/: AndroidManifest.xml
frontend/instant_assistant/android/app/src/main/kotlin/com/example/instant_assistant/: MainActivity.kt
frontend/instant_assistant/ios/Runner/: Info.plist
frontend/instant_assistant/ios/Runner.xcodeproj/: project.pbxproj
frontend/instant_assistant/lib/: main.dart
frontend/instant_assistant/lib/core/models/: backend_response.dart  chat_message.dart
frontend/instant_assistant/lib/core/services/: backend_service.dart
frontend/instant_assistant/lib/features/: assistant_view.dart  assistant_view_model.dart
frontend/instant_assistant/linux/: CMakeLists.txt
frontend/instant_assistant/linux/runner/: my_application.cc
frontend/instant_assistant/macos/Runner.xcodeproj/: project.pbxproj
frontend/instant_assistant/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/instant_assistant/macos/Runner/Configs/: AppInfo.xcconfig
frontend/instant_assistant/src-tauri/: Cargo.toml  tauri.conf.json
frontend/instant_assistant/src-tauri/capabilities/: default.json
frontend/instant_assistant/src-tauri/src/: main.rs
frontend/instant_assistant/test/: widget_test.dart
frontend/instant_assistant/web/: index.html  manifest.json
frontend/instant_assistant/windows/: CMakeLists.txt
frontend/instant_assistant/windows/runner/: Runner.rc  main.cpp
