# In ~/AI/backend/Cargo.toml

[workspace]
resolver = "2" # 使用最新的依赖解析器
members = [
    # 我们的新 Web 服务器入口
    "server",

    # 您所有的业务逻辑核心库
    "orchestrator",
    "agent_memos",
    "memos_core",
    # 您之前的命令行入口 (我们保留它)
    "memos_cli", 
    "common_utils",
]

# 注意：这个文件里不应该有 [dependencies] 或 [package] 部分