[workspace]
resolver = "2"

members = [
    "server",
    "orchestrator",
    "agent_memos",
    "memos_core",
    "memos_cli", 
    "common_utils", "micromodels",
]

# ======================= 【补全缺失的部分】 =======================
# 为工作区所有成员提供一个统一的、可继承的依赖项列表
[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7.5", features = ["macros"] }
bytes = "1"
chrono = "0.4.38"
dirs = "5.0"
futures-util = { version = "0.3", features = ["io"] }
jieba-rs = "0.6"
qdrant-client = "1.14.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
regex = "1.10.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "native-tls-vendored"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stop-words = "0.8"
sysinfo = "0.30.12"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing-subscriber = "0.3"

# 关键：在这里定义工作区内部成员的依赖，以便其他成员通过 workspace = true 继承
common_utils = { path = "common_utils" }
memos_core = { path = "memos_core" }
agent_memos = { path = "agent_memos" }
orchestrator = { path = "orchestrator" }
micromodels = { path = "micromodels" } 