[package]
name = "agent_memos"
version = "0.1.0"
edition = "2021"

[dependencies]
memos_core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
qdrant-client = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true } # <-- 自动继承工作区的统一配置
serde = { workspace = true }
stop-words = { workspace = true }
jieba-rs = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }