[package]
name = "memos_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
orchestrator = { path = "../orchestrator" }
agent_memos = { path = "../agent_memos" }
memos_core = { path = "../memos_core" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] } # 确保tokio有full特性
rustyline = "14.0"