[package]
name = "memos_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# 我们从工作区的[workspace.dependencies]中继承这些依赖
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] } # 保持特性声明

# 【核心修正】: 为 memos_core 包添加对 serde 的依赖
serde = { workspace = true, features = ["derive"] }