# backend/micromodels/Cargo.toml

[package]
name = "micromodels"
version = "0.1.0"
edition = "2021"

[lib]
name = "micromodels"
crate-type = ["rlib"]

# 新增的构建时依赖
[build-dependencies]
prost-build = "0.13"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
ort = { version = "2.0.0-rc.10", default-features = false }
jieba-rs = "0.6"
ndarray = "0.15"
prost = "0.13" # 新增的运行时依赖