[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
memos_core = { path = "../memos_core" }
agent_memos = { path = "../agent_memos" }

# 其他通用依赖
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
qdrant-client = "1.14.0" 
regex = "1.10.4"
