[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
memos_core = { workspace = true }
agent_memos = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["json", "native-tls-vendored"] } # 这里可以省略 stream
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
qdrant-client = { workspace = true }
regex = { workspace = true }