[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
orchestrator = { workspace = true }
agent_memos = { workspace = true }
memos_core = { workspace = true }
common_utils = { workspace = true }